--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "5.13.0",
     "@saas/auth": "workspace:*",
     "bcryptjs": "^2.4.3",
@@ -23,7 +25,7 @@
     "prisma": "^5.13.0",
     "tsx": "^4.8.2"
   },
-  "prisma":{
+  "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
   "prettier": "@saas/prettier",
